--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -24,7 +24,7 @@
         <div class="card-body">
             <div class="row justify-content-center mb-5">
                 <div class="col-xxl-4 col-lg-4 text-center" style="align-self: center;">
-                    <div class="card-subtitle text-muted mb-3"><b>Avance</b></div>
+                    <div class="card-subtitle text-muted mb-3"><b>Avance Evaluación</b></div>
                     <div class="progress progress-xl mb-3">
                         <div class="progress-bar" [ngClass]="{'bg-danger': avance > 0 && avance < 25, 'bg-warning': avance > 25 && avance < 75, 'bg-success': avance > 75 }" role="progressbar" [style]="avance > 0 ? 'width:'+avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{avance}}%</div>
                     </div>
