--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -294,10 +294,17 @@
                         <input type="text" class="form-control" style="width: 400px; margin-right: 30px;" placeholder="{{selectList ? 'Buscar el cuerpo legal' : 'Buscar el Elemento'}}" [(ngModel)]="term2"><!--"service.searchTerm"-->
                         <i class="ri-search-line search-icon"></i>
                     </div>
-                    <div class="form-check form-switch form-check-right" style="margin-right: 50px;font-family: 'Poppins', sans-serif;font-size:1.21875rem;min-width: 180px;">
+                    <div class="btn-group" role="group" aria-label="Vinculación po">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked="" (click)="onClickList(true)">
+                        <label class="btn btn-outline-primary" for="btnradio1">Cuerpos Legales</label>
+                        
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"  (click)="onClickList(false)">
+                        <label class="btn btn-outline-primary" for="btnradio2">Elementos</label>
+                    </div>
+                    <!--<div class="form-check form-switch form-check-right" style="margin-right: 50px;font-family: 'Poppins', sans-serif;font-size:1.21875rem;min-width: 180px;">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckRightDisabled" value="true" (change)="onChangeList($event)">
                         <label class="form-check-label" for="flexSwitchCheckRightDisabled">{{selectList ? 'Cuerpos Legales' : 'Elementos'}}</label>
-                    </div>
+                    </div>-->
                 </div>
             </div>
           </div>
