--- a/src/app/pages/projects/create/evaluation/task-view/task-view.component.html
+++ b/src/app/pages/projects/create/evaluation/task-view/task-view.component.html
@@ -65,8 +65,12 @@
                 </div>
                 
                 <div class="col-md-6">
-                    <h6 style="color: #405189;"><b>COMENTARIO</b></h6>                    
-                    <p>{{articulo.evaluations ? articulo.evaluations.comentario : ''}}</p>
+                    <h6 style="color: #405189;"><b>COMENTARIO</b></h6>
+                    
+                    <ng-container *ngIf="articulo.evaluations">
+                                                    
+                        <div [innerHTML]="parseHtmlString(articulo.evaluations.comentario)"></div>
+                    </ng-container>
                 </div>
                 </div>
 
@@ -97,10 +101,6 @@
                     </div>
                 </div>
                 <div class="col-lg-auto">
-                    <button class="btn btn-primary showModal createTask" type="button" data-bs-toggle="modal"
-                        data-bs-target="#showModal" (click)="openModal(content)">
-                        <i class="ri-add-fill align-bottom"></i> Crear Hallazgo
-                    </button>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                                             <input class="form-check-input me-1" type="checkbox" value="15"
                                                 id="todo{{element.id}}" name="checkAll" (change)="changeStatusHallazgo($event, element.id, element.estado)"
                                                 [checked]="element.estado === 1"><!--(change)="checkUncheckAll($event,element.id)"-->
-                                            <label class="form-check-label" for="todo15">{{element.nombre}}</label>
+                                            <label class="form-check-label" for="todo15">{{removeTags(element.nombre)}}</label>
                                         </div>
                                     </div>
                                 </div>
@@ -142,19 +142,6 @@
                             <td *matCellDef="let element" class="status">
                                 <span style="cursor: pointer;" class="badge  text-uppercase" (click)="changeStatusHallazgo($event, element.id, element.estado)"
                                     [ngClass]=" { 'badge-soft-warning': element.estado === 2 || !element.estado, 'badge-soft-success': element.estado === 1}">{{element.estado == 1 ? 'Completada' : 'Pendiente' }}</span>
-                            </td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="action">
-                            <th scope="col" mat-header-cell *matHeaderCellDef> Acción </th>
-                            <td *matCellDef="let element">
-                                <div class="hstack gap-2">
-                                    <button class="btn btn-sm btn-soft-danger remove-list" data-bs-toggle="modal"
-                                        data-bs-target="#deleteRecordModal" data-remove-id="1"
-                                        (click)="confirm(deleteModel,element.id)">
-                                        <i class="ri-delete-bin-5-fill align-bottom"></i>
-                                    </button>
-                                </div>
                             </td>
                         </ng-container>
 
@@ -185,93 +172,5 @@
         <!-- end col -->
     </div>
 </div>
-
-<!-- Add Hallazgo -->
-<ng-template #content role="document" let-modal>
-    <div class="modal-header bg-light p-3">
-        <h5 class="modal-title" id="exampleModalLabel">Agregar Hallazgo</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
-            (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <form (ngSubmit)="saveHallazgo()" [formGroup]="hallazgoForm" class="tablelist-form" autocomplete="off">
-        <div class="modal-body">
-
-            <div class="mb-3" id="modal-id" style="display: none;">
-                <label for="id-field" class="form-label">ID</label>
-                <input type="text" id="id-field" class="form-control" placeholder="ID" formControlName="id" readonly />
-            </div>
-
-            <div class="mb-3">
-                <label for="area-field" class="form-label"><h6>1. Describe el Hallazgo.</h6></label>
-                <ckeditor [editor]="Editor" data="" formControlName="nombre"></ckeditor>
-                <!--<textarea class="form-control" id="nombreHallazgo" formControlName="nombre" placeholder="Descripción del Hallazgo" rows="3"></textarea>-->
-                <div class="invalid-feedback">Por favor ingresar descripción.</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="area-field" class="form-label"><h6>2. Carga evidencia.</h6></label>
-                <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer2' }" (success)="onFileSelected($event)">
-                </dropzone>
-                <div class="table table-striped files" style="display: none;" id="myPreviewsContainer2">
-                </div>
-                <div class="table table-striped" *ngIf="imgHallazgos.name">
-                    <ul _ngcontent-eyd-c348="" class="list-unstyled vstack gap-4">
-                        <li _ngcontent-eyd-c348="" style="
-                        border: 1px solid #C6C6C6;
-                        margin-top: 10px;">
-                            <div _ngcontent-eyd-c348="" class="d-flex align-items-center">
-                                <div _ngcontent-eyd-c348="" class="flex-shrink-0">
-                                    <div _ngcontent-eyd-c348="" class="avatar-xs">
-                                        <div _ngcontent-eyd-c348="" class="avatar-title">
-                                            <img src="{{imgHallazgos.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div _ngcontent-eyd-c348="" class="flex-grow-1 ms-3">
-                                    <h5 _ngcontent-eyd-c348="" class="mb-1 fs-15">{{imgHallazgos.name}}</h5>
-                                    <p _ngcontent-eyd-c348="" class="mb-0 fs-12 text-muted">{{imgHallazgos.size}}</p>
-                                </div>
-                                <button class="btn btn-danger edit-item-btn d-sm-flex align-items-center justify-content-end" (click)="deleteHallazgoImg()">Quitar</button>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <div class="modal-footer">
-            <div class="hstack gap-2 justify-content-end">
-                <button type="submit" class="btn btn-primary" id="add-btn">Guardar</button>
-            </div>
-        </div>
-    </form>
-</ng-template>
-
-<!-- removeItemModal -->
-<ng-template #deleteModel let-modal>
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="btn-close"
-                (click)="modal.dismiss('Cross click')"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mt-2 text-center">
-                <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
-                    colors="primary:#405189,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
-                <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Está a punto de eliminar este registro</h4>
-                    <p class="text-muted mx-4 mb-0">Eliminar su registro eliminará toda su información de nuestro
-sistema.</p>
-                </div>
-            </div>
-            <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
-                <button class="btn btn-link link-success fw-medium text-decoration-none" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')"><i class="ri-close-line me-1 align-middle"></i> Cerrar</button>
-                <button type="button" class="btn w-sm btn-danger " id="delete-product" (click)="deleteData(deleteId)"
-                    (click)="modal.close('Close click')">Si, Remover!</button>
-            </div>
-        </div>
-    </div><!-- /.modal-content -->
-</ng-template>
 
 <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
