--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -730,17 +730,17 @@
                                 Atributo
                                 </label>
                             </div>
-                            <div class="form-check form-check-primary mb-3">
+                            <!--<div class="form-check form-check-primary mb-3">
                                 <input class="form-check-input" type="checkbox" value="true" id="formComponente" (change)="setConfig('componente', $event)">
                                 <label class="form-check-label" for="formComponente">
                                 Componente
                                 </label>
-                            </div>
+                            </div>-->
                             
                             <div class="form-check form-check-primary mb-3">
                                 <input class="form-check-input" type="checkbox" value="true" id="formFase" (change)="setConfig('fase', $event)">
                                 <label class="form-check-label" for="formFase">
-                                Fase
+                                Criticidad
                                 </label>
                             </div>
                             <!--<a class="dropdown-item" [ngClass]="validateConfig('atributo-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('atributo-'+g.normaId)">Atributo</a>
@@ -909,8 +909,8 @@
                                                                 class="btn  view-btn mb-2" style="width: 100%;" (click)="setAttribute('articuloTipo',s.id, 'monitoreo')">Monitoreo</button>
                                                         </div>
                                                         
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('componente')">
-                                                            <!--<i [ngClass]="{'icon-check': s.reporte}" style="font-size: 30px;" class="ri-git-repository-line"></i>-->
+                                                        <!--<div class="col-xs-1 col" *ngIf="validateConfig('componente')">
+                                                           
                                                             <select class="form-select mb-2" name="componente">
                                                             <option value="bg-soft-success">Componente</option>
                                                             </select>
@@ -918,22 +918,22 @@
                                                             <select class="form-select mb-2" name="subcomponente">
                                                                 <option value="bg-soft-success">Sub Componente</option>
                                                                 </select>
-                                                        </div>
+                                                        </div>-->
                                                         
                                                         <div class="col-xs-1 col" *ngIf="validateConfig('fase')">
                                                             <!--<i [ngClass]="{'icon-check': s.permiso}" style="font-size: 30px;" class="ri-file-list-3-line"></i>-->
                                                             
                                                             <button
                                                                     [ngClass]="validateAttribute('construccion',s.id, s.construccion, 'construccion') ? 'btn-success' :'btn-light'"
-                                                                    class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('construccion',s.id, 'construccion')"  >Construcción</button>
+                                                                    class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('construccion',s.id, 'construccion')"  >Alta</button>
                                                                     
                                                             <button
                                                             [ngClass]="validateAttribute('operacion',s.id, s.operacion, 'operacion') ? 'btn-success' :'btn-light'"
-                                                                    class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('operacion',s.id, 'operacion')">Operación</button>
+                                                                    class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('operacion',s.id, 'operacion')">Media</button>
                                                             
                                                             <button
                                                             [ngClass]="validateAttribute('cierre',s.id, s.cierre, 'cierre') ? 'btn-success' :'btn-light'"
-                                                            class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('cierre',s.id, 'cierre')">Cierre</button>
+                                                            class="btn view-btn mb-2" style="width: 100%;" (click)="setAttribute('cierre',s.id, 'cierre')">Baja</button>
                                                         </div>
 
                                                         <!--<div class="col-lg-4 col">
@@ -1053,7 +1053,7 @@
                                 class="btn view-btn mb-2" [ngClass]="validateAttributeAll('articuloTipo','monitoreo') ? 'btn-success' :'btn-light'" style="width: 100%;"  (click)="setAttributeAll('articuloTipo','monitoreo')"  >Monitoreo</button>
                     </div>
                     
-                    <div class="col-xs-1 col" style="margin: auto;border-left: 3px solid #fff;padding-top: 20px;padding-bottom: 20px;">
+                    <!--<div class="col-xs-1 col" style="margin: auto;border-left: 3px solid #fff;padding-top: 20px;padding-bottom: 20px;">
                         <select class="form-select mb-2" name="componente">
                         <option value="bg-soft-success">Componente</option>
                         </select>
@@ -1061,17 +1061,17 @@
                         <select class="form-select mb-2" name="subcomponente">
                             <option value="bg-soft-success">Sub Componente</option>
                             </select>
-                    </div>
+                    </div>-->
                     
                     <div class="col-xs-1 col" style="border-left: 3px solid #fff;">
                         <button
-                                class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('construccion', 'construccion') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('construccion', 'construccion')">Construcción</button>
+                                class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('construccion', 'construccion') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('construccion', 'construccion')">Alta</button>
                                 
                         <button
-                        class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('operacion', 'operacion') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('operacion', 'operacion')" >Operación</button>
+                        class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('operacion', 'operacion') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('operacion', 'operacion')" >Media</button>
                         
                         <button
-                                class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('cierre', 'cierre') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('cierre', 'cierre')">Cierre</button>
+                                class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('cierre', 'cierre') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('cierre', 'cierre')">Baja</button>
                     </div>
                     <div class="col-sm-2" style="border-left: 3px solid #fff;display: grid;">
                         <button type="button" class="btn btn-primary waves-effect waves-light" style="color: #634A1F;font-family: Poppins;font-weight: 400;background-color: #fff;margin:auto;" data-bs-target="#showModal" (click)="openModal3(content3, 'multiple')">Configurar Elementos</button>
