--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -11,10 +11,8 @@
     </div>
   </div>
 
-  <div class="row project-wrapper">
+  <div class="row project-wrapper mb-4">
     <div class="col-xxl-12">
-      <div class="card">
-       <div class="card-body">
         <div class="row">
             <div class="col-xl-12">
 
@@ -23,35 +21,63 @@
                         <div class="row">
                             <div class="col-lg-12">-->
                                 <!-- Nav tabs -->
-                                <ul ngbNav #nav="ngbNav" [activeId]="activeTab" class="nav nav-tabs mb-3 nav-justified"><!--nav nav-tabs-->
-                                    <li [ngbNavItem]="1">
+                                <ul ngbNav #nav="ngbNav" [activeId]="activeTab" class="nav nav-pills nav-conect nav-justified"><!--nav nav-tabs-->
+                                    <li [ngbNavItem]="1" class="nav-item waves-effect waves-light">
                                         <a ngbNavLink (click)="changeTab(1)">
-                                            <span class="d-sm-block">{{!project_id ? 'Crear' : 'Detalle'}} Auditoría</span>
+                                            <span class="d-sm-block">
+                                                <i class="ri-user-2-line align-middle me-2" style="
+                                                border: 1px #c4cadc solid;
+                                                border-radius: 24px;
+                                                padding: 10px;
+                                                background: #c4cadc;
+                                            "></i>
+                                            {{!project_id ? 'Crear' : 'Detalle'}} Crear Auditoría</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="2" [disabled]="!project_id">
+                                    <li [ngbNavItem]="2" class="nav-item waves-effect waves-light" [disabled]="!project_id">
                                         <a ngbNavLink (click)="changeTab(2)">
-                                            <span class="d-sm-block">Vincular Instalaciones</span>
+                                            <span class="d-sm-block">
+                                                <i class="ri-share-fill align-middle me-2" style="
+                                                border: 1px #c4cadc solid;
+                                                border-radius: 24px;
+                                                padding: 10px;
+                                                background: #c4cadc;
+                                            "></i>
+                                                Vincular cuerpos legales</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent1"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="3" [disabled]="installations_select < 1">
+                                    <li [ngbNavItem]="3" class="nav-item waves-effect waves-light" [disabled]="installations_select < 1">
                                         <a ngbNavLink (click)="changeTab(3)">
-                                            <span class="d-sm-block">Vincular Articulos</span>
+                                            <span class="d-sm-block">
+                                                <i class="ri-share-fill align-middle me-2" style="
+                                                border: 1px #c4cadc solid;
+                                                border-radius: 24px;
+                                                padding: 10px;
+                                                background: #c4cadc;
+                                            "></i>
+                                            Vincular articulos</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent2"></ng-template>
                                         </ng-template>
                                     </li>
                                     
-                                    <li [ngbNavItem]="4" [disabled]="installations_select < 1 || !project_id">
+                                    <li [ngbNavItem]="4" class="nav-item waves-effect waves-light" [disabled]="installations_select < 1 || !project_id">
                                         <a ngbNavLink (click)="changeTab(4)">
-                                            <span class="d-sm-block">Gestionar Hallazgos</span>
+                                            <span class="d-sm-block">
+                                                <i class="ri-settings-5-fill align-middle me-2" style="
+                                                border: 1px #c4cadc solid;
+                                                border-radius: 24px;
+                                                padding: 10px;
+                                                background: #c4cadc;
+                                            "></i>
+                                            Gestionar Hallazgos</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent3"></ng-template>
@@ -64,8 +90,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
         </div>
 </div>
 
@@ -125,19 +149,11 @@
                         </div>
 
                     </div>
-                </div>
-            </div>
-        </div>
 
-        
-        <div class="row">
+        <div class="card-footer">
+        <div class="row mb-4">
             <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header">
                         Responsabilidad
-                    </div>
-                    <div class="card-body">
-                        
                         <div class="row">
                             <div class="col-md-4">   
                                 <label class="form-label" style="margin-top: 20px !important;" for="auditor-entidad-input">Entidad Fiscalizadora</label>
@@ -155,19 +171,20 @@
                             </div>
 
                         </div>
-
-                    </div>
-                </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12"> 
                 <div style="float:right;"><!--class="row justify-content-end"-->
-                    <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="saveAuditoria()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                    <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="saveAuditoria()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
                 </div>
             </div>
         </div>
+        </div>
+        </div>
+    </div>
+</div>
     </form>                                        
 </ng-template>
 <ng-template #TabContent1>
