ajustes de revision lunes 04

--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -19,7 +19,7 @@
                                     <button type="button" style="
                                     width: 200px;" class="btn btn-light waves-effect waves-light" routerLink="/{{project_id}}/project-dashboard"><!--<i class="ri-arrow-right-line label-icon align-middle fs-16"></i> -->Salir</button>
 
-                                    <button type="button" style="margin-left: 20px;" class="btn btn-primary waves-effect waves-light" (click)="terminar()"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
+                                    <button type="button" style="margin-left: 20px;" class="btn btn-primary waves-effect waves-light" (click)="terminar()" *ngIf="!this.evaluations.fechaFinalizacion"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
                                 </div>
                             </div>
                     </div>
@@ -118,7 +118,7 @@
                                                                         </div>
 
                                                                         <div class="col-lg-1 col">
-                                                                            <span class="badge text-bg-no-evaluado" [ngClass]="{'bg-success': v.avance >= 100, 'bg-warning': v.avance > 0 && v.avance < 100, 'text-bg-no-evaluado': v.avance < 1}">{{v.avance >= 100 ? 'Evaluado' : (v.avance > 0 && v.avance < 100 ? 'En evaluación' : 'No evaluado')}}</span>
+                                                                            <span class="badge text-bg-no-evaluado" [ngClass]="{'bg-success': v.avance > 0, 'text-bg-no-evaluado': v.avance < 1}">{{v.avance > 0 ? 'Evaluado' : 'No evaluado'}}</span>
                                                                         </div>
                                                                     </div>
                                                                 </div>
