--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -657,7 +657,7 @@
                 <label for="hallazgo-field" class="form-label">Hallazgo</label>
                 <select class="form-select mb-3" aria-label="Hallazgo" formControlName="evaluationFindingId" placeholder="Seleccione Hallazgo">
                     <option selected>Seleccione Hallazgo </option>
-                    <option *ngFor="let h of hallazgos;" value="{{h.id}}">{{'('+h.id.toString().padStart(6,"H-000")+')'+h.nombre}}</option>
+                    <option *ngFor="let h of hallazgos;" value="{{h.id}}">{{'('+h.id.toString().padStart(6,"H-000")+')'+removeTags(h.nombre)}}</option>
                 </select>
                 <!--<ngx-simplebar style="height: 80px;">
                     <ul class="list-unstyled vstack gap-2 mb-0">
